tests/baselines/reference/functionAssignableToArrayLike.errors.txt
tests/cases/compiler/functionAssignableToArrayLike.ts(1,5): error TS2322: Type '(x: any, y: any) => any' is not assignable to type 'ArrayLike<any>'.
  Index signature is missing in type '(x: any, y: any) => any'.
tests/cases/compiler/functionAssignableToArrayLike.ts(2,5): error TS2322: Type '(x: any, y: any) => any' is not assignable to type 'ArrayLike<string>'.
  Index signature is missing in type '(x: any, y: any) => any'.


==== tests/cases/compiler/functionAssignableToArrayLike.ts (2 errors) ====
    var bad1: ArrayLike<any> = (x, y) => x + y
        ~~~~
!!! error TS2322: Type '(x: any, y: any) => any' is not assignable to type 'ArrayLike<any>'.
!!! error TS2322:   Index signature is missing in type '(x: any, y: any) => any'.
    var bad2: ArrayLike<string> = (x, y) => x + y
        ~~~~
!!! error TS2322: Type '(x: any, y: any) => any' is not assignable to type 'ArrayLike<string>'.
!!! error TS2322:   Index signature is missing in type '(x: any, y: any) => any'.
    